# publish-mdm

./: .gitignore  .infisical.env  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  Dockerfile  Dockerfile.dockerignore  LICENSE  Makefile  README.md  after-app-save.yaml  after-cleanup.yaml  after-delete-save.yaml  after-delete3.yaml  after-reload2.yaml  delete-marked.yaml  delete-marked2.yaml  delete-marked3.yaml  docker-compose.yaml  docker-entrypoint.sh  final-check.yaml  fleet-add-snap.yaml  fleet-list-snap.yaml  foo.txt  issues_to_draft.md  issues_to_draft_2.md  package-lock.json  package.json  policy-check.yaml  policy-edit-snap.yaml  policy-edit-vars.yaml  policy-sections-check.yaml  policy-vars-edit.yaml  policy-vars-saved.yaml  prompts.md  pyproject.toml  qa-final-state.yaml  qa-policy-edit-sections.yaml  qa-policy-edit.yaml  qa-policy-list.yaml  (+9 more)
.claude/skills/flowbite/: SKILL.md
.github/agents/: refactor-app.agent.md  review-tests-bugfix.agent.md  review-tests-coverage.agent.md  review-tests-delete.agent.md  review-tests-refactor.agent.md  review-tests.agent.md  security-tester-confirm.agent.md  security-tester-hunt.agent.md  security-tester-recon.agent.md  security-tester-report.agent.md  security-tester.agent.md
.github/workflows/: docker-publish.yml  main-pr-check.yaml  tests.yaml
apps/infisical/: api.py  fields.py  managers.py
apps/marketing/: context_processors.py  urls.py  views.py
apps/mdm/: admin.py  apps.py  fcm.py  forms.py  import_export.py  models.py  serializers.py  tables.py  tasks.py  urls.py  views.py
apps/mdm/mdms/: __init__.py  android_enterprise.py  base.py  tinymdm.py
apps/mdm/migrations/: 0001_initial.py  0002_devicesnapshot_device_latest_snapshot_and_more.py  0003_firmwaresnapshot.py  0004_fleet_remove_device_unique_policy_and_device_id_and_more.py  0005_fleet_enroll_qr_code.py  0006_remove_policy_unique_default_policy_and_more.py  0007_alter_device_managers_alter_devicesnapshot_managers_and_more.py  0007_fleet_default_app_user.py  0007_policy_editor_fields.py  0007_policyapplication_policyvariable_and_more.py  0007_remove_policy_json_template_and_more.py  0008_alter_device_managers_alter_devicesnapshot_managers_and_more.py  0008_policy_kiosk_custom_launcher_enabled_and_more.py  0008_policy_odk_collect_device_id_template.py  0008_remove_default_policy.py  0009_feature_policy_editor.py  0009_policy_odk_device_id_template_default.py  0009_policyapplication_policyvariable_and_more.py  0009_remove_kiosk_custom_launcher_add_org_fk.py  0010_backfill_odk_collect_policy_application.py  0010_device_brand_model.py  0010_device_manufacturer_model.py  0010_policy_location_connectivity_app_permission.py  0010_remove_policy_mdm.py  0010_remove_policy_mdm_and_custom_managers.py  0011_remove_custom_managers.py  0011_remove_policy_mdm_and_custom_managers.py  0012_device_soft_delete.py  0013_status_reporting_settings.py  0014_device_screen_sharing.py  0014_enrollmenttoken.py  0015_remove_enrollmenttoken_mdm.py
apps/mdm/templatetags/: mdm_tags.py
apps/odk_publish/: admin.py  apps.py  consumers.py  forms.py  google.py  http.py  import_export.py  invitations.py  middleware.py  models.py  nav.py  tables.py  urls.py  views.py
apps/odk_publish/etl/: excel.py  google.py  load.py  template.py  transform.py
apps/odk_publish/migrations/: 0001_initial.py  0002_alter_appuser_central_id.py  0003_alter_appuser_name.py  0003_projectattachment.py  0003_templatevariable_transform.py  0004_merge_20250305_0935.py  0005_alter_project_template_variables_and_more.py  0005_appuser_qr_code_data.py  0005_merge_0003_projectattachment_0004_merge_20250305_0935.py  0006_alter_project_template_variables_and_more.py  0006_merge_20250311_1712.py  0007_alter_appuser_name.py  0007_formtemplate_template_url_user.py  0008_alter_project_template_variables_and_more.py  0008_merge_20250318_1953.py  (+12 more)
apps/patterns/: apps.py  fields.py  forms.py  soft_delete.py  views.py  widgets.py
apps/publish_mdm/: admin.py  apps.py  consumers.py  filters.py  forms.py  import_export.py  invitations.py  middleware.py  models.py  nav.py  routing.py  screen_consumers.py  tables.py  urls.py  utils.py  views.py
apps/tailscale/: admin.py  apps.py  models.py
apps/users/: models.py
config/: asgi.py  celery.py  context_processors.py  dagster.py  email_backends.py  gunicorn.py  import_export_formats.py  logging_filters.py  urls.py  urls_marketing.py
config/settings/: base.py  deploy.py  dev.py  test.py
config/templates/: base.html  home.html
dagster_publish_mdm/: definitions.py
dagster_publish_mdm/assets/: mdm_devices.py  tinymdm_devices.py
dagster_publish_mdm/resources/: postgres.py  tailscale.py
docs/: Makefile  conf.py  index.rst  requirements-docs.txt
docs/src/: contributing.rst  docker-compose.rst  helm-chart.rst  infisical.rst  tutorial.rst
ort-results/: analyzer-result.yml
requirements/base/: base.in  base.txt
requirements/dev/: dev.in  dev.txt
services/: .env  docker-compose.yml
tests/: conftest.py
tests/dagster/: test_dagster_calling.py
tests/dagster_publish_mdm/: test_push_mdm_device.py  test_push_tinymdm_device.py  test_sync_and_push_mdm_devices.py
tests/mdm/: __init__.py  android_enterprise_service_account.json  conftest.py  factories.py  test_admin.py  test_android_enterprise.py  test_configure_amapi_pubsub.py  test_fcm.py  test_fcm_token_view.py  test_forms.py  test_import_export.py  test_mdms_base.py  test_models.py  test_screen_stream_token.py  test_security.py  test_serializers.py  test_tasks.py  test_tinymdm.py  test_views.py
tests/odk_publish/: conftest.py  factories.py  test_admin.py  test_forms.py  test_import_export.py  test_invitations.py  test_middleware.py  test_models.py  test_views.py
tests/patterns/: test_infisical.py  test_soft_delete.py
tests/publish_mdm/: conftest.py  factories.py  test_admin.py  test_consumer.py  test_forms.py  test_invitations.py  test_middleware.py  test_models.py  test_screen_consumers.py  test_security.py  test_views.py
tests/tailscale/: factories.py  test_models.py
tests/users/: factories.py
(+236 files in other folders)
